--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "hackathon_codebase",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -22,5 +21,6 @@
     "express": "^4.14.0",
     "express-session": "^1.14.0",
     "mongoose": "^4.5.8"
-  }
+  },
+  "description": ""
 }
