--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "express-session": "^1.14.0",
+    "jquery-confirm": "^1.5.1",
     "mongoose": "^4.5.8"
   },
   "devDependencies": {},
